v20.0.0-rc-10; code cleanup